--- a/view/view_header.html
+++ b/view/view_header.html
@@ -4,26 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="../asset/style/commun.css">
+    <link rel="stylesheet" href="asset/style/commun.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous" defer></script>
 </head>
 <body>
     <header>
         <nav>
-            <img src="../asset/img/logo Adrar.png" alt="Logo Adrar" height="82px">
+            <img src="asset/img/logo Adrar.png" alt="Logo Adrar" height="82px">
             <h1 style="color: white;">NUMERIQUIZZ</h1>
             <ul>
-                <li><a href="" class="imgNav quizz "></li>
-                <li><a href="" class="imgNav compte"></a></li>
-                <li><a href="" class="imgNav deco"></a></li>
+                <a href="" class="imgNav quizz "></a>
+                <a href="" class="imgNav compte"></a>
+                <a href="" class="imgNav deco"></a>
             </ul>
         </nav>
     </header>
-    <main>
-        
-    </main>
-    <footer>
-
-    </footer>
-</body>
-</html>
