--- a/view/view_header.html
+++ b/view/view_header.html
@@ -11,7 +11,7 @@
     <header>
         <nav>
             <img src="asset/img/logo Adrar.png" alt="Logo Adrar" height="82px">
-            <h1 style="color: white;">NUMERIQUIZZ</h1>
+            <h1 style="color: white; align-content: center;">NUMERIQUIZZ</h1>
             <ul>
                 <a href="" class="imgNav quizz "></a>
                 <a href="" class="imgNav compte"></a>
