--- a/view/view_footer.html
+++ b/view/view_footer.html
@@ -1,13 +1,16 @@
 <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top " style="background-color: #343A40;">
-    <div class="col-md-4 d-flex align-items-center">
-        <a href="https://www.adrar-formation.com/" class="text-decoration-none">
-            <img  src="./asset/img/logoAdrar.png" alt="Logo ADRAR" width="65%" class="ms-3"/>
-        </a>
-        <h2 class="text-light">NUMERIQUIZZ</h2>
+    <div class="col d-flex align-items-center">
+            <img  src="./asset/img/logoAdrar.png" alt="Logo ADRAR" width="20%" class="ms-3 me-3 logoFooter"/>
+        <h2 class="text-light siteNameFooter mb-0">NUMERIQUIZZ</h2>
     </div>
 
-    <div class="col-3 d-flex justify-content-end me-4">
-        <ul class="list-unstyled d-flex mb-0" >
+    <div class="linkFooter col-3 d-flex justify-content-between" style="color: white;">
+        <a>Contact</a>
+        <a>Mentions Légales</a>
+    </div>
+
+    <div class="col d-flex justify-content-end me-4">
+        <ul class="list-unstyled reseauxFooter d-flex mb-0" >
             <li class="ms-3"><a class="link-body-emphasis" href="#"><svg xmlns="http://www.w3.org/2000/svg"
                         width="40" height="40" fill="white" class="bi bi-instagram" viewBox="0 0 16 16">
                         <path
