Création de page Mon Compte Utilisateur (Sara)

--- a/view/view_footer.html
+++ b/view/view_footer.html
@@ -1,4 +1,4 @@
-<footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top " style="background-color: #343A40;">
+<footer class="d-flex flex-wrap justify-content-between align-items-center py-3 border-top " style="background-color: #343A40;">
     <div class="col d-flex align-items-center">
             <img  src="./asset/img/logoAdrar.png" alt="Logo ADRAR" width="20%" class="ms-3 me-3 logoFooter"/>
         <h2 class="text-light siteNameFooter mb-0">NUMERIQUIZZ</h2>
