--- a/view/view_footer.html
+++ b/view/view_footer.html
@@ -1,7 +1,7 @@
 <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 border-top " style="background-color: #343A40;">
     <div class="col d-flex align-items-center">
-            <img  src="./asset/img/logoAdrar.png" alt="Logo ADRAR" width="20%" class="ms-3 me-3 logoFooter" style="max-height: 70px;"/>
-        <h2 class="text-light siteNameFooter mb-0">NUMERIQUIZZ</h2>
+            <img  src="./asset/img/logoAdrar.png" alt="Logo ADRAR" class="ms-3 me-3 logoFooter" />
+        <h3 class="text-light siteNameFooter mb-0">NUMERIQUIZZ</h3>
     </div>
 
     <div class="linkFooter col-3 d-flex justify-content-between" style="color: white;">
