--- a/asset/style/accueil.css
+++ b/asset/style/accueil.css
@@ -5,7 +5,7 @@
     background-color: #343A40;
 }
 article,.imgAcc{
-    height: 405px;
+    height: 440px;
 }
 .btSwitch{
     margin: 5px 10px;
@@ -14,7 +14,8 @@ article,.imgAcc{
     align-content: center;
 }
 #inscription{
-    padding: 25px 70px 50px ;
+    padding: 0px 70px 50px;
+
 }
 #connexion{
     margin-top: 60px;
@@ -29,15 +30,35 @@ article,.imgAcc{
 
 /* Bouton enregistrer */
 .InEnregistrer{
-    width: 100%;
-    border: solid 2px #343A40;
-    border-radius: 5px;
-    background-color: #F7A60F;
-    color: #343A40;
+    border: #343A40 2px solid !important;
+    color: #343A40 !important;
     font-weight: 500 !important;
+    font-size: 105% !important;
+    width: 100%;
+}
+
+.InEnregistrer:hover{
+    color: #F7A60F !important;
+    border: #F7A60F 2px solid !important;
+    font-weight: 500 !important;
+    background-color: #343A40 !important;
 }
 
 .CoEnregistrer{
+    border: #F7A60F 2px solid !important;
+    color: #F7A60F !important;
+    font-weight: 500 !important;
+    font-size: 105% !important;
+    width: 100%;
+}
+
+.CoEnregistrer:hover{
+    color: #343A40 !important;
+    font-weight: 500 !important;
+    background-color: #F7A60F !important;
+}
+
+/* .CoEnregistrer{
     width: 100%;
     border: solid 2px #F7A60F;
     border-radius: 5px;
@@ -50,10 +71,21 @@ article,.imgAcc{
     color: white !important;
     font-weight: 500 !important;
     background-color: #F7A60F !important;
-}
+} */
+
 footer{
     position: absolute;
     bottom: 0;
     right: 0;
     left: 0;
+}
+
+.messageInscription{
+    margin-top: 10px;
+    color: #343a40;
+}
+
+.messageConnexion{
+    margin-top: 10px;
+    color: #ffffff;
 }
